Fixed menu on mobile. Style toggler button. Add drop shadow to menu.

--- a/sass/developerportfolio.scss
+++ b/sass/developerportfolio.scss
@@ -311,14 +311,16 @@ a {
       font-size: 18px;
     }
   }
-  /*
   &__container {
     position: fixed;
-    top: 48px;
-    right: 50%;
-    margin-right: -558px;
+    right: 5%;
+    z-index: 1000;
+    filter: drop-shadow(0 2px 2px rgba(0,0,0,0.14)) drop-shadow(0 3px 1px rgba(0,0,0,0.12)) drop-shadow(0 1px 5px rgba(0,0,0,0.2));
+    @media #{$large-and-up} {
+      top: 48px;
+      right: 0;
+    }
   }
-  */
   &__toggler {
     background: transparent;
     padding: 0;
@@ -326,11 +328,12 @@ a {
     height: 48px;
     box-sizing: border-box;
     font-size: 25px;
-    color: #fff;
+    color: $primary-color;
     display: block;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    background-color: #fff;
+    border-width: 0;
     &:focus {
-      background: transparent;
+      background-color: #fff;
     }
     @media #{$large-and-up} {
       display: none;
@@ -343,6 +346,25 @@ a {
     background: $primary-color;
     transition: clip-path .2s ease-in-out;
     z-index: 1000;
+    li {
+      width: 48px;
+      height: 48px;
+    }
+    a {
+      display: block;
+      width: 48px;
+      height: 48px;
+      font-size: 25px;
+      text-align: center;
+      line-height: 48px;
+      color: #fff;
+      transition: background-color .2s ease-in-out;
+      @media #{$large-and-up} {
+        &.active {
+          background-color: darken($primary-color, 20%);
+        }
+      }
+    }
     &.collapse {
       &:not(.show) {
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
@@ -354,31 +376,6 @@ a {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
       }
     }
-    li {
-      width: 48px;
-      height: 48px;
-    }
-    a {
-      display: inline-block;
-      width: 48px;
-      height: 48px;
-      font-size: 25px;
-      text-align: center;
-      line-height: 48px;
-      color: #fff;
-      transition: background-color .2s ease-in-out;
-      @media #{$large-and-up} {
-        &.active {
-          background-color: darken($primary-color, 10%);
-        }
-      }
-    }
-    @media #{$large-and-up} {
-      position: fixed;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
-    }
   }
 }
 
@@ -388,6 +385,7 @@ a {
 
 .lead {
   position: relative;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
   &__body {
     padding: 24px;
     .row {
